<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/shadow">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/rlRepository"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="?android:attr/selectableItemBackground"
        >

        <TextView
            android:id="@+id/repositoryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big_repository_name"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ownerAvatar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_github_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@+id/repositoryName"/>


        <TextView
            android:id="@+id/ownerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/owner_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="12sp"
            android:layout_marginStart="18dp"
            android:paddingEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/ownerAvatar"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/descriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintWidth_max="200dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toTopOf="@+id/ownerAvatar"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_goes_here"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLabel"/>

        <TextView
            android:id="@+id/languageLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/programming_language"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language_goes_here"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@+id/languageLabel"/>

        <TextView
            android:id="@+id/forksLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fork_label"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@id/language" />

        <TextView
            android:id="@+id/forks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Fork Goes here"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@+id/forksLabel"/>


        <TextView
            android:id="@+id/dateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@id/forks" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_goes_here"
            android:textColor="@color/colorPrimary"
            android:layout_marginBottom="16dp"
            app:layout_constraintStart_toEndOf="@+id/ownerName"
            app:layout_constraintTop_toBottomOf="@+id/dateLabel"/>


    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>

